fixed spacing in gallery

--- a/style.css
+++ b/style.css
@@ -62,6 +62,13 @@ body {
     gap: 2vw;
 }
 
+.imgCol2 {
+    display: flex;
+    flex-direction: column;
+    align-content: space-between;
+    gap: 2vw;
+}
+
 .center {
     display: flex;
     flex-direction: column;
